tests/ui/suggestions/missing-semicolon.stderr
error: expected `;`, found `}`
  --> $DIR/missing-semicolon.rs:6:7
   |
LL |     ()
   |       ^
LL | }
   | - unexpected token
   |
help: add `;` here
   |
LL |     ();
   |       +

error: expected `;`, found `}`
  --> $DIR/missing-semicolon.rs:32:7
   |
LL |     ()
   |       ^
LL | }
   | - unexpected token
   |
help: add `;` here
   |
LL |     ();
   |       +

error[E0618]: expected function, found `{integer}`
  --> $DIR/missing-semicolon.rs:5:13
   |
LL |       let x = 5;
   |           - `x` has type `{integer}`
LL |       let y = x
   |  _____________^
LL | |     ()
   | |______- call expression requires function
   |
help: consider using a semicolon here to finish the statement
   |
LL |     let y = x;
   |              +

error[E0618]: expected function, found `{integer}`
  --> $DIR/missing-semicolon.rs:11:13
   |
LL |       let x = 5;
   |           - `x` has type `{integer}`
LL |       let y = x
   |  _____________^
LL | |     ();
   | |______- call expression requires function
   |
help: consider using a semicolon here to finish the statement
   |
LL |     let y = x;
   |              +

error[E0618]: expected function, found `{integer}`
  --> $DIR/missing-semicolon.rs:16:5
   |
LL |       let x = 5;
   |           - `x` has type `{integer}`
LL |       x
   |  _____^
LL | |     ()
   | |______- call expression requires function
   |
help: consider using a semicolon here to finish the statement
   |
LL |     x;
   |      +

error[E0618]: expected function, found `{integer}`
  --> $DIR/missing-semicolon.rs:31:13
   |
LL |       let y = 5
   |  _____________^
LL | |     ()
   | |______- call expression requires function
   |
help: consider using a semicolon here to finish the statement
   |
LL |     let y = 5;
   |              +

error[E0618]: expected function, found `{integer}`
  --> $DIR/missing-semicolon.rs:35:5
   |
LL |       5
   |  _____^
LL | |     ();
   | |______- call expression requires function
   |
help: consider using a semicolon here to finish the statement
   |
LL |     5;
   |      +

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0618`.
